# basic-python-template-project

./: .gitignore  README.md  pyproject.toml  set_new_project.py  setup.py
src/PACKAGE/: main.py
src/PACKAGE/backend/: hello.py
